# wyoming_tts_proxy

./: .coverage  .dockerignore  Dockerfile  README.md  coverage.xml  pyproject.toml  pytest.xml
.github/workflows/: cd.yml  ci.yml
scripts/: check  format  lint  test
tests/: test_cache.py  test_config.py  test_handler.py  test_logging.py  test_main.py  test_metrics.py  test_normalizer.py
wyoming_tts_proxy/: __main__.py  cache.py  config.py  handler.py  metrics.py  normalizer.py
